--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/images/logo.png" alt="Faucet Boat Games Logo">
+        <img src="assets/images/logo.png" alt="Faucet Boat Games Logo" class="logo">
         <h1>Faucet Boat Games</h1>
         <p>Indie games from passionate developers.</p>
     </header>
