--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faucet Boat Games</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <img src="assets/images/logo.png" alt="Faucet Boat Games Logo" class="logo">
-        <h1>Faucet Boat Games</h1>
-        <p>Indie games from passionate developers.</p>
-    </header>
-    <main>
-        <p>More details coming soon. Stay tuned!</p>
-    </main>
-    <footer>
-        <p>© 2025 Faucet Boat Games | <a href="https://github.com/FaucetBoatGames">GitHub</a></p>
-    </footer>
-</body>
+    <meta name="description" content="Indie games from passionate developers at Faucet Boat Games">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./src/main.ts"></script>
+  </body>
 </html>
